# planes

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  pre-commit.yml
planes/: api.py
tests/: api_test.py  conftest.py  foo_test.py
tests/resources/: single_aircraft.json
