[metadata]
name = planes
version = 0.1.0
description = ADS-B Utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Simmons
author_email = max@mxsmns.net
license = MIT
licence_file = LICENSE
classifiers =
	LICENSE :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: CPython
	Programming Language :: Python :: PyPy

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
	tests*
	testing*

[bdist_wheel]
universal = true

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
